2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Don't use size in pixels for navigation buttons.

	Instead, derive the width from the displayed text.

	* src/ftinspect.h (QPushButtonx): New class, derived from
	`QPushButton'.

	* src/ftinspect.cpp (QPushButtonx::QPushButtonx): New constructor.
	(MainGUI::createLayout): Use `QPushButtonx' for navigation buttons.

2016-05-03  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Make `previous font' and `next font' button logic work.

	* src/ftinspect.h (MainGUI): New slots `checkCurrentFontFileIndex',
	`previousFont, and `nextFont'.

	* src/ftinspect.cpp
	(MainGUI::checkCurrentFontFileIndex, MainGUI::previousFont,
	MainGUI::nextFont): New methods.
	(MainGUI::createConnections): Register connections for
	`previousFontButton' and `nextFontButton'.
	(MainGUI::loadFonts, MainGUI::closeFont, MainGUI::setDefaults):
	Updated.

2016-05-03  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add file dialogs.

	* src/ftinspect.h: Include some more Qt headers.
	(MainGUI): Add `fontFileNames' and `currentFontFileIndex'.
	Add actions to load and close font files.

	* src/ftinspect.cpp (MainGUI::loadFonts, MainGUI::closeFont): New
	methods.
	(MainGUI::createActions, MainGUI::createMenus,
	MainGUI::setDefaults): Updated.

2016-05-03  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Better code.

	* src/ftinspect.h (QComboBoxx): New class, derived from `QComboBox';
	we add one method `setItemEnabled' to enable (or disable) an item
	with a given index.
	(MainGUI): Use `QComboBoxx' for `antiAliasingComboBoxx' (was:
	`antiAliasingCombBox') and `hintingModeComboBoxx' (was:
	`hintingModeComboBox').
	Update all users.

	* src/ftinspect.cpp (MainGUI::checkHintingMode): Simplified.
	(QComboBoxx::setItemEnabled): New method.

2016-05-03  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Start with FreeType initialization.

	* src/ftinspect.h: Include some FreeType headers.
	(Font): New structure for holding a (physical) font.